added more items to slider

--- a/app/contact.html
+++ b/app/contact.html
@@ -219,7 +219,126 @@
               Bedroom furniture
             </a>
           </div>
-          
+          <div class="contact-slider__item">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/1.jpg" alt="Living room category">
+            <a class="contact-slider__link" href="#">
+              Living room furniture
+            </a>
+          </div>
+          <div class="contact-slider__item">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/2.jpg" alt="Office category">
+            <a class="contact-slider__link" href="#">
+              Office furniture
+            </a>
+          </div>
+          <div class="contact-slider__item">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/3.jpg" alt="Living room category">
+            <a class="contact-slider__link" href="#">
+              Living room furniture
+            </a>
+          </div>
+          <div class="contact-slider__item">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/4.jpg" alt="Kitchen category">
+            <a class="contact-slider__link" href="#">
+              Kitchen
+            </a>
+          </div>
+          <div class="contact-slider__item">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/5.jpg" alt="Living room category">
+            <a class="contact-slider__link" href="#">
+              Living room furniture
+            </a>
+          </div>
+          <div class="contact-slider__item">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/6.jpg" alt="Living room category">
+            <a class="contact-slider__link" href="#">
+              Living room furniture
+            </a>
+          </div>
+          <div class="contact-slider__item">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/7.jpg" alt="Dining room category">
+            <a class="contact-slider__link" href="#">
+              Dining room furniture
+            </a>
+          </div>
+          <div class="contact-slider__item">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/8.jpg" alt="Living room category">
+            <a class="contact-slider__link" href="#">
+              Living room furniture
+            </a>
+          </div>
+          <div class="contact-slider__item">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/9.jpg" alt="Chair category">
+            <a class="contact-slider__link" href="#">
+              Chair
+            </a>
+          </div>
+          <div class="contact-slider__item">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/10.jpg" alt="Bedroom category">
+            <a class="contact-slider__link" href="#">
+              Bedroom furniture
+            </a>
+          </div>
+          <div class="contact-slider__item">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/1.jpg" alt="Living room category">
+            <a class="contact-slider__link" href="#">
+              Living room furniture
+            </a>
+          </div>
+          <div class="contact-slider__item">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/2.jpg" alt="Office category">
+            <a class="contact-slider__link" href="#">
+              Office furniture
+            </a>
+          </div>
+          <div class="contact-slider__item">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/3.jpg" alt="Living room category">
+            <a class="contact-slider__link" href="#">
+              Living room furniture
+            </a>
+          </div>
+          <div class="contact-slider__item">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/4.jpg" alt="Kitchen category">
+            <a class="contact-slider__link" href="#">
+              Kitchen
+            </a>
+          </div>
+          <div class="contact-slider__item">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/5.jpg" alt="Living room category">
+            <a class="contact-slider__link" href="#">
+              Living room furniture
+            </a>
+          </div>
+          <div class="contact-slider__item">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/6.jpg" alt="Living room category">
+            <a class="contact-slider__link" href="#">
+              Living room furniture
+            </a>
+          </div>
+          <div class="contact-slider__item">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/7.jpg" alt="Dining room category">
+            <a class="contact-slider__link" href="#">
+              Dining room furniture
+            </a>
+          </div>
+          <div class="contact-slider__item">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/8.jpg" alt="Living room category">
+            <a class="contact-slider__link" href="#">
+              Living room furniture
+            </a>
+          </div>
+          <div class="contact-slider__item">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/9.jpg" alt="Chair category">
+            <a class="contact-slider__link" href="#">
+              Chair
+            </a>
+          </div>
+          <div class="contact-slider__item">
+            <img class="contact-slider__image" src="images/content/contact-page/slider/10.jpg" alt="Bedroom category">
+            <a class="contact-slider__link" href="#">
+              Bedroom furniture
+            </a>
+          </div>
         </div>
       </div>
       <!-- === / CONTACT-SLIDER === -->
