finished without review

--- a/app/blog-one.html
+++ b/app/blog-one.html
@@ -148,10 +148,10 @@
               </div>
               <div class="blog-one__links">
                 <a class="blog-one__link blog-one__link-prev" href="#">
-                  Blog Post - Lorem ipsum dolor sit amet consectetur.
+                  <span>Blog Post - Lorem ipsum dolor sit amet consectetur.</span>
                 </a>
                 <a class="blog-one__link blog-one__link-next" href="#">
-                  Blog Post - Lorem ipsum dolor sit amet.
+                  <span>Blog Post - Lorem ipsum dolor sit amet.</span>
                 </a>
               </div>
               <div class="blog-one__comments">
