--- a/app/html/about.html
+++ b/app/html/about.html
@@ -4,13 +4,39 @@
 <head>
   <!-- === META === -->
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0" />
+  <link rel="apple-touch-icon"
+    sizes="180x180"
+    href="./favicons/apple-touch-icon.png">
+  <link rel="icon"
+    type="image/png"
+    sizes="32x32"
+    href="./favicons/favicon-32x32.png">
+  <link rel="icon"
+    type="image/png"
+    sizes="16x16"
+    href="./favicons/favicon-16x16.png">
+  <link rel="manifest"
+    href="./favicons/site.webmanifest">
+  <link rel="mask-icon"
+    href="./favicons/safari-pinned-tab.svg"
+    color="#f8cb00">
+  <link rel="shortcut icon"
+    href="./favicons/favicon.ico">
+  <meta name="msapplication-TileColor"
+    content="#ffffff">
+  <meta name="msapplication-config"
+    content="./favicons/browserconfig.xml">
+  <meta name="theme-color"
+    content="#ffffff">
   <!-- === / META === -->
 
   <title>Desire • About</title>
 
   <!-- === CSS === -->
-  <link rel="stylesheet" href="css/main.min.css" />
+  <link rel="stylesheet"
+    href="css/main.min.css" />
   <!-- === / CSS === -->
 </head>
 
@@ -26,7 +52,8 @@
         <div class="container">
           <ul class="breadcrumbs__list">
             <li class="breadcrumbs__item">
-              <a class="breadcrumbs__link" href="index.html">
+              <a class="breadcrumbs__link"
+                href="index.html">
                 Home
               </a>
             </li>
@@ -70,8 +97,12 @@
           </div>
         </div>
         <div class="about__pop-up">
-          <a class="about__pop-up-link-to-vid" data-fancybox href="https://youtu.be/oubc0B25Vn8?t=20">
-            <img class="about__pop-up-play-icon" src="img/icons/play-button.svg" alt="play button icon">
+          <a class="about__pop-up-link-to-vid"
+            data-fancybox
+            href="https://youtu.be/oubc0B25Vn8?t=20">
+            <img class="about__pop-up-play-icon"
+              src="img/icons/play-button.svg"
+              alt="play button icon">
           </a>
         </div>
       </section>
@@ -81,7 +112,9 @@
       <section class="inspiration">
         <div class="container-fluid">
           <div class="inspiration__inner">
-            <img class="inspiration__image" src="img/inspiration-image.png" alt="green chair">
+            <img class="inspiration__image"
+              src="img/inspiration-image.png"
+              alt="green chair">
             <div class="inspiration__content">
               <h3 class="inspiration__title title">
                 Our inspiration in details
@@ -100,7 +133,8 @@
                       80%
                     </p>
                   </div>
-                  <div class="inspiration__line" style="width: 80%"></div>
+                  <div class="inspiration__line"
+                    style="width: 80%"></div>
                 </li>
                 <li class="inspiration__item">
                   <div class="inspiration__item-content">
@@ -111,7 +145,8 @@
                       70%
                     </p>
                   </div>
-                  <div class="inspiration__line" style="width: 70%"></div>
+                  <div class="inspiration__line"
+                    style="width: 70%"></div>
                 </li>
                 <li class="inspiration__item">
                   <div class="inspiration__item-content">
@@ -122,7 +157,8 @@
                       75%
                     </p>
                   </div>
-                  <div class="inspiration__line" style="width: 75%"></div>
+                  <div class="inspiration__line"
+                    style="width: 75%"></div>
                 </li>
                 <li class="inspiration__item">
                   <div class="inspiration__item-content">
@@ -133,7 +169,8 @@
                       40%
                     </p>
                   </div>
-                  <div class="inspiration__line" style="width: 40%"></div>
+                  <div class="inspiration__line"
+                    style="width: 40%"></div>
                 </li>
               </ul>
             </div>
@@ -147,21 +184,45 @@
         <div class="container-fluid">
           <div class="partners__inner">
             <div class="partners__items">
-              <img class="partners__image" src="img/content/partners/logo-valken-horst.svg" alt="Valken Horst Hotel logo">
-              <img class="partners__image" src="img/content/partners/logo-generator.svg" alt="Generator hostel logo">
-              <img class="partners__image" src="img/content/partners/logo-dev-x.svg" alt="DevX coworking space logo">
-              <img class="partners__image" src="img/content/partners/logo-the-commons.svg" alt="The Commons coworking space logo">
-              <img class="partners__image" src="img/content/partners/logo-betahaus.svg" alt="Betahaus coworking space logo">
-              <img class="partners__image" src="img/content/partners/logo-fora.svg" alt="FORA coworking space logo">
+              <img class="partners__image"
+                src="img/content/partners/logo-valken-horst.svg"
+                alt="Valken Horst Hotel logo">
+              <img class="partners__image"
+                src="img/content/partners/logo-generator.svg"
+                alt="Generator hostel logo">
+              <img class="partners__image"
+                src="img/content/partners/logo-dev-x.svg"
+                alt="DevX coworking space logo">
+              <img class="partners__image"
+                src="img/content/partners/logo-the-commons.svg"
+                alt="The Commons coworking space logo">
+              <img class="partners__image"
+                src="img/content/partners/logo-betahaus.svg"
+                alt="Betahaus coworking space logo">
+              <img class="partners__image"
+                src="img/content/partners/logo-fora.svg"
+                alt="FORA coworking space logo">
             </div>
 
             <div class="partners__items">
-              <img class="partners__image" src="img/content/partners/logo-valken-horst.svg" alt="Valken Horst Hotel logo">
-              <img class="partners__image" src="img/content/partners/logo-generator.svg" alt="Generator hostel logo">
-              <img class="partners__image" src="img/content/partners/logo-dev-x.svg" alt="DevX coworking space logo">
-              <img class="partners__image" src="img/content/partners/logo-the-commons.svg" alt="The Commons coworking space logo">
-              <img class="partners__image" src="img/content/partners/logo-betahaus.svg" alt="Betahaus coworking space logo">
-              <img class="partners__image" src="img/content/partners/logo-fora.svg" alt="FORA coworking space logo">
+              <img class="partners__image"
+                src="img/content/partners/logo-valken-horst.svg"
+                alt="Valken Horst Hotel logo">
+              <img class="partners__image"
+                src="img/content/partners/logo-generator.svg"
+                alt="Generator hostel logo">
+              <img class="partners__image"
+                src="img/content/partners/logo-dev-x.svg"
+                alt="DevX coworking space logo">
+              <img class="partners__image"
+                src="img/content/partners/logo-the-commons.svg"
+                alt="The Commons coworking space logo">
+              <img class="partners__image"
+                src="img/content/partners/logo-betahaus.svg"
+                alt="Betahaus coworking space logo">
+              <img class="partners__image"
+                src="img/content/partners/logo-fora.svg"
+                alt="FORA coworking space logo">
             </div>
           </div>
         </div>
@@ -170,8 +231,11 @@
 
       <!-- === COLLECTION === -->
       <div class="collection">
-        <a class="collection__item" href="#">
-          <img class="collection__image" src="img/content/collection/collection-item-1.jpg" alt="Velvet Couch">
+        <a class="collection__item"
+          href="#">
+          <img class="collection__image"
+            src="img/content/collection/collection-item-1.jpg"
+            alt="Velvet Couch">
           <div class="collection__info">
             <h6 class="collection__info-title">
               Velvet Couch
@@ -181,8 +245,10 @@
             </p>
           </div>
         </a>
-        <a class="collection__item" href="#">
-          <img class="collection__image" src="img/content/collection/collection-item-2.jpg"
+        <a class="collection__item"
+          href="#">
+          <img class="collection__image"
+            src="img/content/collection/collection-item-2.jpg"
             alt="Living room furniture set (Sofa with 2 armchairs)">
           <div class="collection__info">
             <h6 class="collection__info-title">
@@ -193,8 +259,11 @@
             </p>
           </div>
         </a>
-        <a class="collection__item" href="#">
-          <img class="collection__image" src="img/content/collection/collection-item-3.jpg" alt="Armchair 'Parrot'">
+        <a class="collection__item"
+          href="#">
+          <img class="collection__image"
+            src="img/content/collection/collection-item-3.jpg"
+            alt="Armchair 'Parrot'">
           <div class="collection__info">
             <h6 class="collection__info-title">
               Armchair "Parrot"
@@ -204,8 +273,11 @@
             </p>
           </div>
         </a>
-        <a class="collection__item" href="#">
-          <img class="collection__image" src="img/content/collection/collection-item-4.jpg" alt="Small Cabinet">
+        <a class="collection__item"
+          href="#">
+          <img class="collection__image"
+            src="img/content/collection/collection-item-4.jpg"
+            alt="Small Cabinet">
           <div class="collection__info">
             <h6 class="collection__info-title">
               Small Cabinet
@@ -215,8 +287,11 @@
             </p>
           </div>
         </a>
-        <a class="collection__item" href="#">
-          <img class="collection__image" src="img/content/collection/collection-item-5.jpg" alt="Couch 'Sidney'">
+        <a class="collection__item"
+          href="#">
+          <img class="collection__image"
+            src="img/content/collection/collection-item-5.jpg"
+            alt="Couch 'Sidney'">
           <div class="collection__info">
             <h6 class="collection__info-title">
               Couch "Sidney"
