--- a/app/html/page.html
+++ b/app/html/page.html
@@ -4,13 +4,39 @@
 <head>
   <!-- === META === -->
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0" />
+  <link rel="apple-touch-icon"
+    sizes="180x180"
+    href="./favicons/apple-touch-icon.png">
+  <link rel="icon"
+    type="image/png"
+    sizes="32x32"
+    href="./favicons/favicon-32x32.png">
+  <link rel="icon"
+    type="image/png"
+    sizes="16x16"
+    href="./favicons/favicon-16x16.png">
+  <link rel="manifest"
+    href="./favicons/site.webmanifest">
+  <link rel="mask-icon"
+    href="./favicons/safari-pinned-tab.svg"
+    color="#f8cb00">
+  <link rel="shortcut icon"
+    href="./favicons/favicon.ico">
+  <meta name="msapplication-TileColor"
+    content="#ffffff">
+  <meta name="msapplication-config"
+    content="./favicons/browserconfig.xml">
+  <meta name="theme-color"
+    content="#ffffff">
   <!-- === / META === -->
 
   <title>Desire • Blank page</title>
 
   <!-- === CSS === -->
-  <link rel="stylesheet" href="css/main.min.css" />
+  <link rel="stylesheet"
+    href="css/main.min.css" />
   <!-- === / CSS === -->
 </head>
 
@@ -25,7 +51,8 @@
         <div class="container">
           <ul class="breadcrumbs__list">
             <li class="breadcrumbs__item">
-              <a class="breadcrumbs__link" href="index.html">
+              <a class="breadcrumbs__link"
+                href="index.html">
                 Home
               </a>
             </li>
