Add (JS-script) Adding underline to specific nav link, based on url user on

--- a/app/html/blocks/header.html
+++ b/app/html/blocks/header.html
@@ -4,30 +4,36 @@
       <nav class="menu">
         <ul class="menu__list">
           <li class="menu__list-item">
-            <a class="menu__list-link" href="about.html">About</a>
+            <a class="menu__list-link"
+              href="about.html">About</a>
           </li>
           <li class="menu__list-item">
-            <a class="menu__list-link" href="gallery.html">Gallery</a>
+            <a class="menu__list-link"
+              href="gallery.html">Gallery</a>
           </li>
         </ul>
       </nav>
-      <span class="logo">
-        <img class="logo__img" src="img/logo.png" alt="logo">
-      </span>
+      <a class="logo"
+        href="index.html">
+        <img class="logo__img"
+          src="img/logo.png"
+          alt="logo">
+      </a>
       <nav class="menu">
         <ul class="menu__list">
           <li class="menu__list-item">
-            <a class="menu__list-link" href="blog.html">Blog</a>
+            <a class="menu__list-link"
+              href="blog.html">Blog</a>
           </li>
           <li class="menu__list-item">
-            <a class="menu__list-link menu__list-link--line" href="contact.html">Contact</a>
+            <a class="menu__list-link"
+              href="contact.html">Contact</a>
           </li>
         </ul>
       </nav>
-      <button class="header__button">
-        <a class="header__btn-link" href="#">
-          <div class="header__btn-link--lines"></div>
-        </a>
+      <button class="header__button"
+        type="button">
+        <div class="header__button--lines"></div>
       </button>
       <button class="header__button-menu">
         <span></span>
@@ -36,18 +42,23 @@
       </button>
       <div class="rightside-menu rightside-menu--close">
         <button class="rightside-menu__close">
-          <img src="img/icons/close-btn.svg" alt="close button">
+          <img src="img/icons/close-btn.svg"
+            alt="close button">
         </button>
         <div class="rightside-menu__content">
-          <a class="rightside-menu__logo" href="#">
-            <img src="img/logo-large.png" alt="logo">
+          <a class="rightside-menu__logo"
+            href="#">
+            <img src="img/logo-large.png"
+              alt="logo">
           </a>
           <h4 class="rightside-menu__title">Furniture for life</h4>
           <p class="rightside-menu__text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus sunt quod voluptate recusandae sapiente,
             omnis quidem quibusdam debitis tempora et.
           </p>
-          <img class="rightside-menu__image" src="img/rightside-image.jpg" alt="image">
+          <img class="rightside-menu__image"
+            src="img/rightside-image.jpg"
+            alt="image">
         </div>
       </div>
     </div>
