--- a/app/html/about.html
+++ b/app/html/about.html
@@ -44,7 +44,7 @@
 
   <div class="wrapper">
     <!-- === HEADER === -->
-    @@include('blocks/header-about.html')
+    @@include('blocks/header.html')
     <!-- === / HEADER === -->
 
     <main class="main">
@@ -312,11 +312,9 @@
   </div>
 
   <!-- === JAVASCRIPT === -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/mixitup/3.3.1/mixitup.min.js"></script>
+  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script> -->
   <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
-  <script src="js/main.min.js"></script>
+  <script src="js/about.min.js"></script>
   <!-- === / JAVASCRIPT === -->
 </body>
 
