--- a/app/html/blog-one.html
+++ b/app/html/blog-one.html
@@ -44,73 +44,9 @@
 
   <div class="wrapper">
 
-    <header class="header">
-      <div class="container">
-        <div class="header__inner">
-          <nav class="menu">
-            <ul class="menu__list">
-              <li class="menu__list-item">
-                <a class="menu__list-link"
-                  href="about.html">About</a>
-              </li>
-              <li class="menu__list-item">
-                <a class="menu__list-link"
-                  href="gallery.html">Gallery</a>
-              </li>
-            </ul>
-          </nav>
-          <a class="logo"
-            href="index.html">
-            <img class="logo__img"
-              src="img/logo.png"
-              alt="logo">
-          </a>
-          <nav class="menu">
-            <ul class="menu__list">
-              <li class="menu__list-item">
-                <span class="menu__list-link menu__list-link--active">Blog</span>
-              </li>
-              <li class="menu__list-item">
-                <a class="menu__list-link menu__list-link--line"
-                  href="contact.html">Contact</a>
-              </li>
-            </ul>
-          </nav>
-          <button class="header__button">
-            <a class="header__btn-link"
-              href="#">
-              <div class="header__btn-link--lines"></div>
-            </a>
-          </button>
-          <button class="header__button-menu">
-            <span></span>
-            <span></span>
-            <span></span>
-          </button>
-          <div class="rightside-menu rightside-menu--close">
-            <button class="rightside-menu__close">
-              <img src="img/icons/close-btn.svg"
-                alt="close button">
-            </button>
-            <div class="rightside-menu__content">
-              <a class="rightside-menu__logo"
-                href="#">
-                <img src="img/logo-large.png"
-                  alt="logo">
-              </a>
-              <h4 class="rightside-menu__title">Furniture for life</h4>
-              <p class="rightside-menu__text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus sunt quod voluptate recusandae sapiente,
-                omnis quidem quibusdam debitis tempora et.
-              </p>
-              <img class="rightside-menu__image"
-                src="img/rightside-image.jpg"
-                alt="image">
-            </div>
-          </div>
-        </div>
-      </div>
-    </header>
+    <!-- === HEADER === -->
+    @@include('blocks/header.html')
+    <!-- === / HEADER === -->
 
     <main class="main">
       <div class="breadcrumbs">
@@ -505,7 +441,7 @@
 
 
 
-  <script src="js/main.min.js"></script>
+  <script src="js/blog.min.js"></script>
 </body>
 
 </html>
